--- a/src/main/resources/pom.xml
+++ b/src/main/resources/pom.xml
@@ -18,4 +18,27 @@
 
     <dependencies>
     </dependencies>
+
+    <build>
+        <finalName>pomxml-maven-download</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-eclipse-compiler</artifactId>
+                <version>2.8.0-01</version>
+                <extensions>true</extensions>
+            </plugin>
+            <plugin>
+                <!-- http://maven.apache.org/plugins/maven-dependency-plugin/copy-dependencies-mojo.html -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <configuration>
+                   <outputDirectory>
+
+                   </outputDirectory>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
