--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>jackson-module-jsonSchema</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsonschema2pojo</groupId>
+            <artifactId>jsonschema2pojo-core</artifactId>
+            <version>0.4.0</version>
+        </dependency>
         <!-- ~~~~~~~~~~~~ -->
 
 
