fixed input problem

--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,15 @@
         </dependency>
         <!-- ~~~~~~~~~~~~ -->
 
+
+        <!-- commons-lang 4 escape. -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.2.1</version>
+        </dependency>
+        <!-- ~~~~~~~~~~~~ -->
+
         <!-- open nlp tools. -->
         <dependency>
             <groupId>org.apache.opennlp</groupId>
