--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
         <!-- ~~~~~~~~~~~~ -->
 
 
-        <!-- jackson, gson, json-io. -->
+        <!-- jackson, gson, json-io, kryo. -->
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-xc</artifactId>
@@ -111,8 +111,14 @@
         <dependency>
             <groupId>com.cedarsoftware</groupId>
             <artifactId>json-io</artifactId>
-            <version>2.4.5</version>
+            <version>2.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.22</version>
+        </dependency>
+
         <!-- ~~~~~~~~~~~~ -->
 
 
@@ -311,6 +317,12 @@
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
                     </connectors>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>org.eclipse.jetty.server.Request.maxFormContentSize</name>
+                            <value>-1</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
         </plugins>
