--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,15 @@
             <version>3.3.1</version>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~ -->
+
+        <!-- jgit. -->
+        <dependency>
+            <groupId>org.eclipse.jgit</groupId>
+            <artifactId>org.eclipse.jgit</artifactId>
+            <version>3.2.0.201312181205-r</version>
+        </dependency>
+        <!-- ~~~~~~~~~~~~~~~ -->
+
         <!--dependency>
             <groupId>com.bloidonia</groupId>
             <artifactId>groovy-common-extensions</artifactId>
