--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,15 @@
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
     <servlet>
         <servlet-name>GroovyServlet</servlet-name>
-        <servlet-class>groovy.servlet.GroovyServlet</servlet-class>
+        <!--<servlet-class>groovy.servlet.GroovyServlet</servlet-class>-->
+        <servlet-class>org.jldservice.server.JarLoadingServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>GroovyTemplate</servlet-name>
         <servlet-class>groovy.servlet.TemplateServlet</servlet-class>
     </servlet>
+
+
     <servlet-mapping>
         <servlet-name>GroovyServlet</servlet-name>
         <url-pattern>*.groovy</url-pattern>
