--- a/pom.xml
+++ b/pom.xml
@@ -183,6 +183,14 @@
         </dependency>
         <!-- ~~~~~~~~~~~~~~~ -->
 
+        <!-- jsonpath. -->
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>0.9.1</version>
+        </dependency>
+        <!-- ~~~~~~~~~~~~~~~ -->
+
         <!--dependency>
             <groupId>com.bloidonia</groupId>
             <artifactId>groovy-common-extensions</artifactId>
