--- a/pom.xml
+++ b/pom.xml
@@ -121,11 +121,11 @@
 
         <!-- ~~~~~~~~~~~~ -->
         <!-- json2json. -->
-        <dependency>
-            <groupId>org.lappsgrid</groupId>
-            <artifactId>json2json</artifactId>
-            <version>0.1.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.lappsgrid</groupId>-->
+            <!--<artifactId>json2json</artifactId>-->
+            <!--<version>0.1.3</version>-->
+        <!--</dependency>-->
         <!-- ~~~~~~~~~~~~ -->
 
         <!-- commons-lang 4 escape. -->
