--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,11 @@
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
         <!-- groovy web service support. -->
-        <dependency>
-            <groupId>org.codehaus.groovy.modules</groupId>
-            <artifactId>groovyws</artifactId>
-            <version>0.5.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.codehaus.groovy.modules</groupId>-->
+            <!--<artifactId>groovyws</artifactId>-->
+            <!--<version>0.5.2</version>-->
+        <!--</dependency>-->
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
         <!-- maven cli support. -->
         <dependency>
@@ -121,11 +121,11 @@
 
         <!-- ~~~~~~~~~~~~ -->
         <!-- json2json. -->
-        <!--<dependency>-->
-            <!--<groupId>org.lappsgrid</groupId>-->
-            <!--<artifactId>json2json</artifactId>-->
-            <!--<version>0.1.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.lappsgrid</groupId>
+            <artifactId>json2json</artifactId>
+            <version>0.1.3</version>
+        </dependency>
         <!-- ~~~~~~~~~~~~ -->
 
         <!-- commons-lang 4 escape. -->
