--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>groovy-all</artifactId>
             <version>2.2.2</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
         <!-- groovy web service support. -->
@@ -197,6 +203,12 @@
         </dependency>
         <!-- ~~~~~~~~~~~~~~~ -->
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.1</version>
+            <scope>test</scope>
+        </dependency>
         <!--dependency>
             <groupId>com.bloidonia</groupId>
             <artifactId>groovy-common-extensions</artifactId>
