--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
         </dependency>
 
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>6.0</version>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
