--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
+            <scope>provided</scope>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
 
