--- a/pom.xml
+++ b/pom.xml
@@ -23,10 +23,14 @@
             <id>the Codehaus Maven2 repo</id>
             <url>http://repository.codehaus.org/org/codehaus/jackson/</url>
         </repository>
-
         <repository>
             <id>lapps</id>
             <url>http://eldrad.cs-i.brandeis.edu:6061/nexus/content/repositories/releases/</url>
+        </repository>
+
+        <repository>
+        <id>anc-releases</id>
+        <url>http://www.anc.org:8080/nexus/content/repositories/release/</url>
         </repository>
     </repositories>
 
@@ -45,6 +49,28 @@
             <scope>provided</scope>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
+        <dependency>
+            <groupId>org.lappsgrid</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <!-- axis web service support. -->
+        <dependency>
+            <groupId>org.apache.axis</groupId>
+            <artifactId>axis</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.xml</groupId>
+            <artifactId>jaxrpc-api</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-discovery</groupId>
+            <artifactId>commons-discovery</artifactId>
+            <version>0.4</version>
+        </dependency>
 
         <!-- groovy web service support. -->
         <!--<dependency>-->
@@ -131,7 +157,7 @@
         <dependency>
             <groupId>org.lappsgrid</groupId>
             <artifactId>json2json</artifactId>
-            <version>0.1.6</version>
+            <version>0.2.2</version>
         </dependency>
         <!-- ~~~~~~~~~~~~ -->
 
