--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>chunqishi.github.com</groupId>
     <artifactId>javalinkdata-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Java based link-data service wrapper</name>
     <description>A simple tool to wrap java interface as json-ld service.</description>
 
 
     <properties>
+        <opennlp.version>1.5.3</opennlp.version>
+        <stanford.version>3.4.1</stanford.version>
     </properties>
 
     <repositories> <!-- internal repository -->
@@ -39,9 +41,8 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.2.2</version>
+            <version>2.4.3</version>
         </dependency>
-
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -62,10 +63,16 @@
             <version>1.4</version>
         </dependency>
         <dependency>
-            <groupId>javax.xml</groupId>
-            <artifactId>jaxrpc-api</artifactId>
-            <version>1.1</version>
+            <groupId>axis</groupId>
+            <artifactId>axis-jaxrpc</artifactId>
+            <version>1.4</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>javax.xml</groupId>-->
+            <!--<artifactId>jaxrpc-api</artifactId>-->
+            <!--<version>1.1.3</version>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>commons-discovery</groupId>
             <artifactId>commons-discovery</artifactId>
@@ -144,7 +151,7 @@
         <dependency>
             <groupId>com.cedarsoftware</groupId>
             <artifactId>json-io</artifactId>
-            <version>2.5.1</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>com.esotericsoftware.kryo</groupId>
@@ -173,12 +180,12 @@
         <dependency>
             <groupId>org.apache.opennlp</groupId>
             <artifactId>opennlp-tools</artifactId>
-            <version>1.5.3</version>
+            <version>${opennlp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.opennlp</groupId>
             <artifactId>opennlp-uima</artifactId>
-            <version>1.5.3</version>
+            <version>${opennlp.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.opennlp</groupId>
@@ -191,18 +198,18 @@
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>3.3.1</version>
+            <version>${stanford.version}</version>
         </dependency>
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-corenlp</artifactId>
-            <version>3.3.1</version>
+            <version>${stanford.version}</version>
             <classifier>models</classifier>
         </dependency>
         <dependency>
             <groupId>edu.stanford.nlp</groupId>
             <artifactId>stanford-parser</artifactId>
-            <version>3.3.1</version>
+            <version>${stanford.version}</version>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~ -->
 
@@ -226,7 +233,7 @@
         <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
-            <version>0.9.1</version>
+            <version>2.0.0</version>
         </dependency>
         <!-- ~~~~~~~~~~~~~~~ -->
 
