--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
     </repositories>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>1.0.7</version>
+        </dependency>
+
         <!-- groovy to class support. -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -324,7 +331,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
-                    <argLine>-Xms512m -Xmx2048m -XX:MaxPermSize=512m</argLine>
+                    <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=64m</argLine>
                     <!-- mvn test: java.lang.OutOfMemoryError: Java heap space -->
                 </configuration>
             </plugin>
