--- a/pom.xml
+++ b/pom.xml
@@ -274,7 +274,7 @@
 
 
     <build>
-        <finalName>jld</finalName>
+        <finalName>jld#${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
