--- a/pom.xml
+++ b/pom.xml
@@ -38,12 +38,23 @@
 
     <dependencies>
 
+
+        <!-- ini file reader. -->
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+
+        <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
+        <!-- file based database. -->
         <dependency>
             <groupId>org.mapdb</groupId>
             <artifactId>mapdb</artifactId>
             <version>1.0.7</version>
         </dependency>
 
+        <!-- ~~~~~~~~~~~~~~~~~~~~~~~ -->
         <!-- groovy to class support. -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -302,27 +313,25 @@
                 </configuration-->
             </plugin>
 
+
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <!-- 2.8.0-01 and later require maven-compiler-plugin 3.1 or higher -->
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
                     <compilerId>groovy-eclipse-compiler</compilerId>
-                    <!-- set verbose to be true if you want lots of uninteresting messages -->
-                    <!-- <verbose>true</verbose> -->
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.8.0-01</version>
+                        <version>2.9.1-01</version>
                     </dependency>
                     <!-- for 2.8.0-01 and later you must have an explicit dependency on groovy-eclipse-batch -->
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.1.8-01</version>
+                        <version>2.3.7-01</version>
                     </dependency>
                 </dependencies>
             </plugin>
