--- a/src/main/resources/brat/brat_lapps.json
+++ b/src/main/resources/brat/brat_lapps.json
@@ -356,11 +356,31 @@
       "bgColor": "lightgray",
       "borderColor": "darken",
       "fgColor": "black"
+    },
+    {
+      "type": "MENTION",
+      "labels": ["Mention"],
+      "bgColor": "lightgray",
+      "borderColor": "darken",
+      "fgColor": "black"
     }
   ],
   "entity_attribute_types": [
   ],
   "relation_types": [
+    {
+      "type"     : "COREFERENCE",
+      "labels"   : ["Coreference", "Coref"],
+      // dashArray allows you to adjust the style of the relation arc
+      "dashArray": "3,3",
+      "color"    : "purple",
+      /* A relation takes two arguments, both are named and can be constrained
+          as to which types they may apply to */
+      "args"     : [
+        {"role": "Representative", "targets": ["MENTION"] },
+        {"role": "Mention",  "targets": ["MENTION"] }
+      ]
+    }
   ],
   "event_types": [
   ]
