--- a/src/main/resources/db/lapps.html#services.json
+++ b/src/main/resources/db/lapps.html#services.json
@@ -15,7 +15,7 @@
       "type":"Sentence-Splitter",
       "name": "Stanford Sentence Splitter",
       "version" : "v2.0.0",
-      "server" : "Vassar Collage",
+      "server" : "Vassar College",
       "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.splitter_2.0.0",
       "username" : "tester",
       "password" : "tester"
@@ -38,7 +38,7 @@
       "type":"Sentence-Splitter",
       "name": "Gate Sentence Splitter",
       "version" : "v2.0.0",
-      "server" : "Vassar Collage",
+      "server" : "Vassar College",
       "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.splitter_2.0.0",
       "username" : "tester",
       "password" : "tester"
@@ -59,7 +59,7 @@
         "type":"Tokenizer",
         "name": "Stanford Tokenizer",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.tokenizer_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -82,7 +82,7 @@
         "type":"Tokenizer",
         "name": "Gate Tokenizer",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.tokenizer_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -103,7 +103,7 @@
         "type":"POS-Tagger",
         "name": "Stanford POSTagger",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.tagger_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -126,7 +126,7 @@
         "type":"POS-Tagger",
         "name": "Gate POSTagger",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.tagger_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -149,7 +149,7 @@
         "type":"Named-Entity-Recognizer",
         "name": "Stanford NER",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.ner_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -172,7 +172,7 @@
         "type":"Named-Entity-Recognizer",
         "name": "Gate NER",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.ner_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -333,7 +333,7 @@
         "type":"Sentence-Splitter",
         "name": "Stanford Sentence Splitter",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.splitter_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -352,7 +352,7 @@
         "type":"Tokenizer",
         "name": "Stanford Tokenizer",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.tokenizer_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -371,7 +371,7 @@
         "type":"POS-Tagger",
         "name": "Stanford POSTagger",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.tagger_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -390,7 +390,7 @@
         "type":"Named-Entity-Recognizer",
         "name": "Stanford NER",
         "version" : "v2.0.0",
-        "server" : "Vassar Collage",
+        "server" : "Vassar College",
         "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:stanford.ner_2.0.0",
         "username" : "tester",
         "password" : "tester"
@@ -412,7 +412,7 @@
           "type":"Sentence-Splitter",
           "name": "Gate Sentence Splitter",
           "version" : "v2.0.0",
-          "server" : "Vassar Collage",
+          "server" : "Vassar College",
           "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.splitter_2.0.0",
           "username" : "tester",
           "password" : "tester"
@@ -423,7 +423,7 @@
           "type":"Tokenizer",
           "name": "Gate Tokenizer",
           "version" : "v2.0.0",
-          "server" : "Vassar Collage",
+          "server" : "Vassar College",
           "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.tokenizer_2.0.0",
           "username" : "tester",
           "password" : "tester"
@@ -434,7 +434,7 @@
           "type":"POS-Tagger",
           "name": "Gate POSTagger",
           "version" : "v2.0.0",
-          "server" : "Vassar Collage",
+          "server" : "Vassar College",
           "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.tagger_2.0.0",
           "username" : "tester",
           "password" : "tester"
@@ -445,7 +445,7 @@
           "type":"Named-Entity-Recognizer",
           "name": "Gate NER",
           "version" : "v2.0.0",
-          "server" : "Vassar Collage",
+          "server" : "Vassar College",
           "wsdl" : "http://grid.anc.org:8080/service_manager/wsdl/anc:gate.ner_2.0.0",
           "username" : "tester",
           "password" : "tester"
